Use URI instead of path string for reading test files