@@ -20,8 +20,11 @@ import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -108,9 +111,9 @@ public final class HL7Utils {
      * @return string of the entire file contents with line endings converted to carriage returns
      * @throws IOException when reading file
      */
-    public static String readHl7FromResource(String fileName) throws IOException {
-        String path = getPathFromResource(fileName);
-        List<String> readAllLines = Files.readAllLines(Paths.get(path));
+    public static String readHl7FromResource(String fileName) throws IOException, URISyntaxException {
+        URI uri = getPathFromResource(fileName);
+        List<String> readAllLines = Files.readAllLines(Path.of(uri));
         return String.join("\r", readAllLines) + "\r";
     }
 
@@ -118,12 +121,10 @@ public final class HL7Utils {
      * @param fileName the relative filename of the resource
      * @return the filename in the resource directory
      */
-    public static String getPathFromResource(String fileName) {
+    public static URI getPathFromResource(String fileName) throws URISyntaxException {
         // the class used here doesn't seem to matter
         ClassLoader classLoader = HL7Utils.class.getClassLoader();
-        URL url = classLoader.getResource(fileName);
-        String path = url.getPath();
-        return path;
+        return classLoader.getResource(fileName).toURI();
     }
 
     /**
